# mining-sim

./: CMakeLists.txt  README.md
include/: Coordinator.h  Metrics.h  SimManager.h  Site.h  Station.h  Truck.h
src/: Coordinator.cpp  SimManager.cpp  Site.cpp  Station.cpp  Truck.cpp  main.cpp
